@@ -571,6 +571,19 @@ ovsdb_file_change_cb(const struct ovsdb_row *old,
     return true;
 }
 
+struct json *
+ovsdb_file_txn_annotate(struct json *json, const char *comment)
+{
+    if (!json) {
+        json = json_object_create();
+    }
+    if (comment) {
+        json_object_put_string(json, "_comment", comment);
+    }
+    json_object_put(json, "_date", json_integer_create(time_wall_msec()));
+    return json;
+}
+
 static struct ovsdb_error *
 ovsdb_file_commit(struct ovsdb_replica *replica,
                   const struct ovsdb_txn *txn, bool durable)
@@ -843,14 +856,7 @@ ovsdb_file_txn_commit(struct json *json, const char *comment,
 {
     struct ovsdb_error *error;
 
-    if (!json) {
-        json = json_object_create();
-    }
-    if (comment) {
-        json_object_put_string(json, "_comment", comment);
-    }
-    json_object_put(json, "_date", json_integer_create(time_wall_msec()));
-
+    json = ovsdb_file_txn_annotate(json, comment);
     error = ovsdb_log_write(log, json);
     json_destroy(json);
     if (error) {
